启动脚本改动、部分bug修复